# memoria

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
docs/plans/: 2026-02-28-implementation-plan.md  2026-02-28-trip-memories-engine-design.md
frontend/: lightbox.js  memories.css  memories.js
src/batch/: Dockerfile  analyze.py  curate.py  dedup.py  exif.py  main.py  manifest.py  requirements.txt  resize.py
src/shared/: config.py  firestore.py  gcs.py  models.py
src/webhook/: Dockerfile  main.py  requirements.txt  storage.py  twilio_handler.py
terraform/: cloud_run.tf  iam.tf  main.tf  outputs.tf  scheduler.tf  secrets.tf  storage.tf  terraform.tfvars.example  variables.tf
terraform/environments/: dev.tfvars.example  prod.tfvars.example
tests/: conftest.py  test_analyze.py  test_batch.py  test_config.py  test_curate.py  test_dedup.py  test_exif.py  test_firestore.py  test_gcs.py  test_manifest.py  test_models.py  test_resize.py  test_webhook.py
trips/uk-2026/: invitation.html  itinerary.md  trip-plan.md  trip.yaml
