[project]
name = "memoria"
version = "0.1.0"
description = "Trip memories engine — SMS photos in, curated journal out"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "twilio>=9.0",
    "google-cloud-storage>=2.14",
    "google-cloud-firestore>=2.16",
    "anthropic>=0.40",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "gunicorn>=22.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
